@@ -5,6 +5,7 @@ V4.2.0 (in progress)
 [REFACTOR] : Update debug statistics : more accurate and more extensible
 [REFACTOR] : Session management and users authentification are completely refactored to use Zend Framework
 [FEATURE] : Add oembed object and oembed polymod field (external media field). Update Mediacenter to manage oembed medias
+[FEATURE] : Add parent page selection on new page creation
 
 V4.1.4 (in progress)
 [BUG] : Correct bugs numbers: 2070 (see http://www.automne-cms.org/bug/)
